-
Bug
-
Resolution: Fixed
-
P4
-
8, 9, 10, 11
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243346 | 11.0.8-oracle | Dean Long | P4 | Resolved | Fixed | b04 |
| JDK-8240163 | 11.0.8 | Dean Long | P4 | Resolved | Fixed | b01 |
| JDK-8240149 | openjdk8u252 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
-XX:+VerifyOops finds numerous problems when running JPRT.
One reproducer:
jtreg -jdk:../build/slowdebug/jdk -va -nr test/compiler/unsafe/JdkInternalMiscUnsafeAccessTestObject.java
One reproducer:
jtreg -jdk:../build/slowdebug/jdk -va -nr test/compiler/unsafe/JdkInternalMiscUnsafeAccessTestObject.java
- backported by
-
JDK-8240149 -XX:+VerifyOops finds numerous problems when running JPRT
-
- Resolved
-
-
JDK-8240163 -XX:+VerifyOops finds numerous problems when running JPRT
-
- Resolved
-
-
JDK-8243346 -XX:+VerifyOops finds numerous problems when running JPRT
-
- Resolved
-
- blocks
-
JDK-8161684 [testconf] Add VerifyOops' testing into compiler tiers
-
- Resolved
-
- relates to
-
JDK-8205118 CodeStrings::copy() assertion caused by -XX:+VerifyOops -XX:+PrintStubCode
-
- Open
-