8187078: -XX:+VerifyOops finds numerous problems when running JPRT

Reviewed-by: kvn